RESOLVED FIXED47685
Cache link status at linkProgram and use it in useProgram instead of querying GPU
https://bugs.webkit.org/show_bug.cgi?id=47685
Summary Cache link status at linkProgram and use it in useProgram instead of querying...
Zhenyao Mo
Reported 2010-10-14 13:26:38 PDT
This is a performance bottleneck.
Attachments
patch (4.78 KB, patch)
2010-10-14 14:06 PDT, Zhenyao Mo
kbr: review+
zmo: commit-queue-
Zhenyao Mo
Comment 1 2010-10-14 14:06:41 PDT
Kenneth Russell
Comment 2 2010-10-14 14:10:46 PDT
Comment on attachment 70776 [details] patch Looks good. Thanks for fixing this so quickly.
Zhenyao Mo
Comment 3 2010-10-14 14:12:15 PDT
Note You need to log in before you can comment on or make changes to this bug.