2010-10-14  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        Cache link status at linkProgram and use it in useProgram instead of querying GPU
        https://bugs.webkit.org/show_bug.cgi?id=47685

        * html/canvas/WebGLProgram.cpp: Always cache link status at linkStatus and use it upon query.
        (WebCore::WebGLProgram::WebGLProgram):
        * html/canvas/WebGLProgram.h: Ditto.
        (WebCore::WebGLProgram::getLinkStatus):
        (WebCore::WebGLProgram::setLinkStatus):
        * html/canvas/WebGLRenderingContext.cpp: Ditto.
        (WebCore::WebGLRenderingContext::getProgramParameter):
        (WebCore::WebGLRenderingContext::linkProgram):
        (WebCore::WebGLRenderingContext::useProgram):


Canonical link: https://commits.webkit.org/60389@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69804 268f45cc-cd09-0410-ab3c-d52691b4dbfc